# app/Http/Controllers/Controller.php
@@ -7,17 +7,21 @@ use Illuminate\Foundation\Validation\ValidatesRequests;
 use Illuminate\Routing\Controller as BaseController;
 
 /**
- * @OA\Info(
- *      version="1.0.0",
- *      title="Laravel SMS API Dokümantasyonu",
- *      description="Laravel ile oluşturulan SMS API için Swagger Dokümantasyonu",
- *      @OA\Contact(
- *          email="smtkuo@gmail.com"
- *      ),
- *      @OA\License(
- *          name="Apache 2.0",
- *          url="http://www.apache.org/licenses/LICENSE-2.0.html"
- *      )
+ * @OA\OpenApi(
+ *     @OA\Info(
+ *         title="SMS API",
+ *         version="1.0.0"
+ *     ),
+ *     @OA\Components(
+ *         @OA\SecurityScheme(
+ *             securityScheme="bearerAuth",
+ *             in="header",
+ *             name="Authorization",
+ *             type="http",
+ *             scheme="bearer",
+ *             bearerFormat="JWT",
+ *         )
+ *     )
  * )
  */
 class Controller extends BaseController
